--- a/test/Makefile.targets
+++ b/test/Makefile.targets
@@ -10,3 +10,5 @@ test_psyr_pher: $(test_psyr_pher.o)
 test_subgrids: $(test_subgrids.o)
 	$(link-target)
 
+test_tran: $(test_tran.o)
+	$(link-target)
