--- a/test/Makefile.dep
+++ b/test/Makefile.dep
@@ -18,3 +18,6 @@ test_diag.o = test_diag.o $($(_modobj_libscalapackfx_module)) $($(_modobj_test_c
 
 test_tran.o: $$(_modobj_libscalapackfx_module) $$(_modobj_test_common_module)
 test_tran.o = test_tran.o $($(_modobj_libscalapackfx_module)) $($(_modobj_test_common_module))
+
+test_svd.o: $$(_modobj_libscalapackfx_module) $$(_modobj_test_common_module)
+test_svd.o = test_svd.o $($(_modobj_libscalapackfx_module)) $($(_modobj_test_common_module))
