--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,20 +1,20 @@
-set(TARGETS
+set(targets
   test_desc
   test_subgrids)
 
-set(COMMON-DEP-TARGETS
+set(common-dep-targets
   test_det
   test_diag
   test_psyr_pher
   test_svd
   test_tran)
 
-foreach(target ${TARGETS})
+foreach(target ${targets})
   add_executable(${target} ${target}.f90)
   target_link_libraries(${target} scalapackfx ${SCALAPACK_LIBRARIES} ${MPI_Fortran_LIBRARIES})
 endforeach()
 
-foreach(target ${COMMON-DEP-TARGETS})
+foreach(target ${common-dep-targets})
   add_executable(${target} ${target}.f90 test_common.f90)
   target_link_libraries(${target} scalapackfx ${SCALAPACK_LIBRARIES} ${MPI_Fortran_LIBRARIES})
 endforeach()
