--- a/make.arch.template
+++ b/make.arch.template
@@ -6,7 +6,7 @@
 FXX = mpif90
 
 # Fortran compiler options
-FXXOPT =
+FXXOPT = -std=f2003
 
 # Linker
 LN = $(FXX)
@@ -14,13 +14,14 @@ LN = $(FXX)
 # Linker options
 LNOPT = 
 
-# M4 interpreter
-M4 = m4
+# FYPP interpreter (see https://github.com/aradi/fypp)
+FYPP = $(ROOT)/external/fypp/fypp
 
-# M4 interpreter options
-M4OPT = ""
+# FYPP interpreter options (e.g. -DDEBUG for debug mode)
+FYPPOPT = ""
 
-# How to link the Scalapack library
-# Only needed for the test programs, you can leave it empty, if you only
-# compile the library.
-LIB_SCALAPACK = -lscalapack -llapack -lblas
+# Directory where the build should happen
+BUILDDIR = $(ROOT)/_build
+
+# Where to copy files when installation is required
+INSTALLDIR = $(ROOT)/_install
