--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -26,13 +26,16 @@ foreach(fppsrc IN LISTS sources-fpp)
   list(APPEND SOURCES-F90-PREPROC ${CMAKE_CURRENT_BINARY_DIR}/${f90src})
 endforeach()
 
-add_library(scalapackfx ${SOURCES-F90-PREPROC})
+add_library(scalapackfx_objlib OBJECT ${SOURCES-F90-PREPROC})
+add_library(scalapackfx $<TARGET_OBJECTS:scalapackfx_objlib>)
 
 set(includedir ${CMAKE_CURRENT_BINARY_DIR}/include)
 
-set_target_properties(scalapackfx PROPERTIES Fortran_MODULE_DIRECTORY ${includedir})
+set_target_properties(scalapackfx_objlib PROPERTIES Fortran_MODULE_DIRECTORY ${includedir})
 
-target_include_directories(scalapackfx INTERFACE ${includedir})
+target_include_directories(scalapackfx_objlib INTERFACE ${includedir})
+target_include_directories(scalapackfx INTERFACE
+  $<TARGET_PROPERTY:scalapackfx_objlib,INTERFACE_INCLUDE_DIRECTORIES>)
 
 install(TARGETS scalapackfx
   ARCHIVE DESTINATION ${INSTALL_LIB_DIR}
