Make CMakeLists.txt Nag compatible

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -33,9 +33,8 @@ set(includedir ${CMAKE_CURRENT_BINARY_DIR}/include)
 
 set_target_properties(scalapackfx_objlib PROPERTIES Fortran_MODULE_DIRECTORY ${includedir})
 
-target_include_directories(scalapackfx_objlib INTERFACE ${includedir})
-target_include_directories(scalapackfx INTERFACE
-  $<TARGET_PROPERTY:scalapackfx_objlib,INTERFACE_INCLUDE_DIRECTORIES>)
+target_include_directories(scalapackfx_objlib PUBLIC ${includedir})
+target_include_directories(scalapackfx PUBLIC ${includedir})
 
 install(TARGETS scalapackfx
   ARCHIVE DESTINATION ${INSTALL_LIB_DIR}
