--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,8 @@ project(scalapackfx VERSION 0.1 LANGUAGES Fortran)
 set(LIBRARY_ONLY FALSE CACHE BOOL "Whether only library should be compiled")
 
 # Only needed, if tests are also compiled
-set(SCALAPACK_LIBRARIES "scalapack" CACHE STRING "ScaLAPACK libraries")
+set(EXTERNAL_LIBRARIES "scalapack" CACHE STRING
+  "External (ScaLAPACK, LAPACK, BLAS) libraries needed to build the tests/examples.")
 
 # Installation paths
 set(INSTALL_BIN_DIR "${CMAKE_INSTALL_PREFIX}/bin" CACHE PATH
