--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -9,12 +9,19 @@ set(common-dep-targets
   test_svd
   test_tran)
 
+add_library(common OBJECT test_common.f90)
+#target_link_libraries(common PRIVATE scalapackfx)
+add_dependencies(common scalapackfx)
+target_include_directories(common
+  PRIVATE $<TARGET_PROPERTY:scalapackfx,INTERFACE_INCLUDE_DIRECTORIES>)
+
 foreach(target IN LISTS targets)
   add_executable(${target} ${target}.f90)
   target_link_libraries(${target} scalapackfx ${EXTERNAL_LIBRARIES} ${MPI_Fortran_LIBRARIES})
 endforeach()
 
 foreach(target IN LISTS common-dep-targets)
-  add_executable(${target} ${target}.f90 test_common.f90)
-  target_link_libraries(${target} scalapackfx ${EXTERNAL_LIBRARIES} ${MPI_Fortran_LIBRARIES})
+  add_executable(${target} ${target}.f90 $<TARGET_OBJECTS:common>)
+  target_link_libraries(${target} scalapackfx ${EXTERNAL_LIBRARIES}
+    ${MPI_Fortran_LIBRARIES})
 endforeach()
