Fix cmake and compilation issues

--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -26,17 +26,18 @@ foreach(fppsrc IN LISTS sources-fpp)
   list(APPEND SOURCES-F90-PREPROC ${CMAKE_CURRENT_BINARY_DIR}/${f90src})
 endforeach()
 
-add_library(scalapackfx_objlib OBJECT ${SOURCES-F90-PREPROC})
-add_library(scalapackfx $<TARGET_OBJECTS:scalapackfx_objlib>)
+add_library(scalapackfx ${SOURCES-F90-PREPROC})
 
-set(includedir ${CMAKE_CURRENT_BINARY_DIR}/include)
+set(BUILD_MOD_DIR ${CMAKE_CURRENT_BINARY_DIR}/include)
 
-set_target_properties(scalapackfx_objlib PROPERTIES Fortran_MODULE_DIRECTORY ${includedir})
+set_target_properties(scalapackfx PROPERTIES Fortran_MODULE_DIRECTORY ${BUILD_MOD_DIR})
 
-target_include_directories(scalapackfx_objlib PUBLIC ${includedir})
-target_include_directories(scalapackfx PUBLIC ${includedir})
+target_include_directories(scalapackfx PUBLIC
+  $<BUILD_INTERFACE:${BUILD_MOD_DIR}>
+  $<INSTALL_INTERFACE:${INSTALL_MOD_DIR}>)
 
 install(TARGETS scalapackfx
+  EXPORT ${INSTALL_EXPORT_NAME}
   ARCHIVE DESTINATION ${INSTALL_LIB_DIR}
   LIBRARY DESTINATION ${INSTALL_LIB_DIR})
 
