--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -41,4 +41,6 @@ install(TARGETS scalapackfx
   ARCHIVE DESTINATION ${INSTALL_LIB_DIR}
   LIBRARY DESTINATION ${INSTALL_LIB_DIR})
 
-install(DIRECTORY ${includedir}/ DESTINATION ${INSTALL_MOD_DIR})
+if(INSTALL_INCLUDE_FILES)
+  install(DIRECTORY ${BUILD_MOD_DIR}/ DESTINATION ${INSTALL_MOD_DIR})
+endif()
