--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -11,18 +11,14 @@ set(common-dep-targets
   test_tran)
 
 add_library(common OBJECT test_common.f90)
-#target_link_libraries(common PRIVATE scalapackfx)
-add_dependencies(common scalapackfx)
-target_include_directories(common
-  PRIVATE $<TARGET_PROPERTY:scalapackfx,INTERFACE_INCLUDE_DIRECTORIES>)
+target_link_libraries(common PRIVATE ScalapackFx)
 
 foreach(target IN LISTS targets)
   add_executable(${target} ${target}.f90)
-  target_link_libraries(${target} scalapackfx ${EXTERNAL_LIBRARIES} ${MPI_Fortran_LIBRARIES})
+  target_link_libraries(${target} ScalapackFx)
 endforeach()
 
 foreach(target IN LISTS common-dep-targets)
   add_executable(${target} ${target}.f90 $<TARGET_OBJECTS:common>)
-  target_link_libraries(${target} scalapackfx ${EXTERNAL_LIBRARIES}
-    ${MPI_Fortran_LIBRARIES})
+  target_link_libraries(${target} ScalapackFx)
 endforeach()
