--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,39 +1,72 @@
-cmake_minimum_required(VERSION 3.5)
+cmake_minimum_required(VERSION 3.16)
 
-project(scalapackfx VERSION 0.1 LANGUAGES Fortran)
+include(CMakePackageConfigHelpers)
 
-# Only needed, if tests are also compiled
-set(EXTERNAL_LIBRARIES "scalapack;lapack;blas" CACHE STRING
-  "External (ScaLAPACK, LAPACK, BLAS) libraries needed to build the tests/examples.")
+list(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake
+  ${CMAKE_CURRENT_SOURCE_DIR}/cmake/Modules)
+include(ScalapackFxUtils)
 
-set(LIBRARY_ONLY FALSE CACHE BOOL "Whether only library should be compiled")
+include(${CMAKE_CURRENT_SOURCE_DIR}/config.cmake)
 
-option(BUILD_SHARED_LIBS "Whether the library should be a shared one" FALSE)
+project(ScalapackFx VERSION 0.1 LANGUAGES Fortran)
 
-option(INSTALL_INCLUDE_FILES "Whether include / module files should be installed" TRUE)
+setup_build_type()
 
-# Installation paths
-set(INSTALL_BIN_DIR "${CMAKE_INSTALL_PREFIX}/bin" CACHE PATH
-  "Installation directory for executables")
-
-set(INSTALL_LIB_DIR "${CMAKE_INSTALL_PREFIX}/lib" CACHE PATH
-  "Installation directory for libraries")
-
-set(INSTALL_MOD_DIR "${CMAKE_INSTALL_PREFIX}/include" CACHE PATH
-  "Installation directory for Fortran module files")
-
-set(INSTALL_CMAKE_DIR "${CMAKE_INSTALL_PREFIX}/lib/cmake" CACHE PATH
-  "Installation directory for CMake package export files")
-
-find_package(MPI REQUIRED)
+#
+# Prerequisites
+#
+find_package(CustomScalapack REQUIRED QUIET)
+find_package(CustomLapack REQUIRED)
 find_program(FYPP fypp)
-if(FYPP)
-  message(STATUS "Preprocessor fypp: ${FYPP}")
-else()
-  message(FATAL_ERROR "Prepropcessor fypp not found")
+if(NOT FYPP)
+  message(FATAL_ERROR "Preprocessor fypp could not be found")
 endif()
+
+#
+# Build instructions
+#
+include(GNUInstallDirs)
 
 add_subdirectory(lib)
-if(NOT LIBRARY_ONLY)
+if(NOT BUILD_EXPORTED_TARGETS_ONLY)
   add_subdirectory(test)
 endif()
+
+#
+# Installation
+#
+add_library(ScalapackFx INTERFACE)
+target_link_libraries(ScalapackFx INTERFACE scalapackfx)
+install(TARGETS ScalapackFx EXPORT scalapackfx-targets)
+
+install(EXPORT scalapackfx-targets
+  FILE scalapackfx-targets.cmake
+  NAMESPACE ScalapackFx::
+  DESTINATION "${CMAKE_INSTALL_LIBDIR}/cmake/scalapackfx"
+  EXPORT_LINK_INTERFACE_LIBRARIES)
+
+configure_package_config_file(
+  ${CMAKE_CURRENT_SOURCE_DIR}/utils/export/scalapackfx-config.cmake.in
+  ${CMAKE_CURRENT_BINARY_DIR}/cmake/scalapackfx-config.cmake
+  INSTALL_DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/scalapackfx)
+
+write_basic_package_version_file(
+  ${CMAKE_CURRENT_BINARY_DIR}/cmake/scalapackfx-config-version.cmake
+  VERSION ${PROJECT_VERSION}
+  COMPATIBILITY SameMajorVersion)
+
+install(
+  FILES ${CMAKE_CURRENT_BINARY_DIR}/cmake/scalapackfx-config.cmake
+  ${CMAKE_CURRENT_BINARY_DIR}/cmake/scalapackfx-config-version.cmake
+  DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/scalapackfx)
+
+install(
+  DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/cmake/Modules
+  DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/scalapackfx)
+
+get_pkgconfig_params(PKGCONFIG_REQUIRES PKGCONFIG_LIBS PKGCONFIG_LIBS_PRIVATE PKGCONFIG_C_FLAGS)
+configure_file(${CMAKE_CURRENT_SOURCE_DIR}/utils/export/scalapackfx.pc.in
+  ${CMAKE_CURRENT_BINARY_DIR}/scalapackfx.pc @ONLY)
+install(
+  FILES "${CMAKE_CURRENT_BINARY_DIR}/scalapackfx.pc"
+  DESTINATION "${CMAKE_INSTALL_LIBDIR}/pkgconfig")
