Parallel general matrix inversion and test

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -8,6 +8,7 @@ set(common-dep-targets
   test_diag
   test_gemr2d
   test_linecomm
+  test_matinv
   test_psyr_pher
   test_remoteelements
   test_svd
