--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -9,6 +9,7 @@ set(common-dep-targets
   test_gemr2d
   test_linecomm
   test_matinv
+  test_pposv
   test_psyr_pher
   test_remoteelements
   test_svd
